<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- STRINGS -->
    <string name="app_name">Nimbus Clipper</string>
    <string name="settings">Settings</string>
    
    <string name="preview">Preview</string>
    
    <string name="please_wait">please wait...</string>
    <string name="choose_folder">Choose folder</string>
    <string name="dontask">don\'t ask folder and tags</string>
    <string name="welcome_to">Welcome to</string>
    <string name="action_settings">Settings</string>
    <string name="username_hint">email</string>
    <string name="password_hint">password</string>
    <string name="text_hint">Type your text here</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="ok">OK</string>
    <string name="guide">Guide</string>
    <string name="rate_us">Rate us</string>
    <string name="work_offline">Work offline</string>
    <string name="create_new_account"><u>Create <u>Nimbus</u> account</u></string>
    <string name="goto_nimbus"><u>Go to Nimbus Clipper</u></string>
	<string name="forgot"><u>Forgot Password?</u></string>
    <string name="lets_start">Let\'s start</string>
    <string name="take_photo">Take Photo</string>
    <string name="from_gallery">From Gallery</string>
    <string name="web_clipper">Web Clipper</string>
    <string name="home">Home</string>
    <string name="tag_hint">Add your tag</string>
    <string name="save_full">Save full page</string>
    <string name="save_fragment">Save page fragment</string>
    <string name="take_screenshot">Take screenshot</string>
    <string name="save_page">Save page</string>
    <string name="save_image">Save image</string>
    <string name="impossible_save_fragment">It is imposible to save fragment to your Nimbus account</string>
    <string name="try_again">Try again</string>
    <string name="saving_fragment">The fragment is saving to your Nimbus account</string>
    <string name="success_save_fragment">The fragment was successfully saved to your Nimbus account</string>
    <string name="success_save_shot">The picture was successfully saved to your Nimbus account</string>
    <string name="success_save_pdf">The document was successfully saved to your Nimbus account</string>
    <string name="fragment_name_is">The fragment name is</string>
    <string name="fragment_name">Postnews.com</string>
    <string name="article_link">Public link:</string>
    <string name="get_link">Get link</string>
    <string name="copy_clipboard">To clipboard</string>
    <string name="share">Share</string>
    <string name="get_public_link">Get public link</string>
    <string name="undo">Undo</string>
    <string name="undo_all">Undo All</string>
    <string name="help">Help</string>
    <string name="turn_left">Turn Left</string>
    <string name="turn_right">Turn Right</string>
    <string name="blur">Blur</string>
    
    <string name="blur_all">Blur all</string>
    <string name="login_to_save">To save online, you need to login into your Nimbus account</string>
    <string name="register_to_save">To save fragments, you need to have a Nimbus account</string>
    <string name="type">Type</string>
    <string name="line">Line</string>
    <string name="standart_size">40</string>
    <string name="h1_title">Clip Article and Entire Page</string>
    <string name="h2_title">Clip Selected Content</string>
    <string name="h3_title">Take and Annotate Screenshots and Photos</string>
    <string name="h4_title">Mark and Annotate PDF documents</string>
    <string name="h5_title">Share Clips With Friends</string>

    <string name="save_article_mask">The %s was successfully saved to your Nimbus account</string>
    <string name="full_page">Full page</string>
    <string name="article">Article</string>
    <string name="fragment">Fragment</string>
    <string name="invalid_email">invalid email address</string>
    <string name="incorrect_password">incorrect password</string>
    <string name="mobile">Mobile</string>
    <string name="desktop">Desktop</string>
    <string name="save_all_styles">Save all styles</string>
    <string name="without_style_saving">Without style saving</string>
    <string name="short_password">password less than 8 symbols</string>
    <string name="use_longtap">Use tap to select custom range to clip</string>
    <string name="uploading_to_Nimbus">Uploading to Nimbus</string>
    <string name="select_default_folder">Select default folder</string>
    <string name="select_folder">Select Folder</string>
    <string name="how_to_clip">How to clip</string>
    <string name="select_option">Select option</string>
    <string name="user_agent">User Agent</string>
    <string name="select_default_user_agent">Select Default user agent</string>
    <string name="do_save_image">Save Image?</string>
    <string name="save_yes">Save</string>
    <string name="save_no">Don\'t save</string>
    
    <string name="rate">Rate</string>
    <string name="rate_text">How do you appreciate our App?</string>
    <string name="rate_awesome">Awesome!</string>
    <string name="rate_average">Average</string>
    <string name="rate_sucks">Sucks</string>
    <string name="select_format">Select Image Format</string>
    <string name="format_to_upload">Image Format</string>
    
    <string name="restore_pass">Restore password</string>
    <string name="restore">Restore</string>
    <string name="wait_load">Page is loading. Please wait...</string>
    
    <string name="no_media_warning">Storage media not present</string>
	<string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
	<string name="cancel">Cancel</string>
	<string name="search_backwards">Search backwards</string>
	<string name="search_forwards">Search forwards</string>
	<string name="search_document">Search document</string>
	<string name="outline_title">Table of Contents</string>
	<string name="enter_password">Enter password</string>
	<string name="text_not_found">Text not found</string>
	<string name="searching_">Searching&#8230;</string>
	<string name="toggle_links">Highlight and enable links</string>
	<string name="no_further_occurrences_found">No further occurrences found</string>
	<string name="select">Select</string>
	<string name="search">Search</string>
	<string name="copy">Copy</string>
	<string name="strike_out">Strike-out</string>
	<string name="delete">Delete</string>
	<string name="highlight">Highlight</string>
	<string name="underline">Underline</string>
	<string name="edit_annotations">Edit annotations</string>
	<string name="ink">Ink</string>
	<string name="rect">Rectangle</string>
	<string name="arrow">Arrow</string>
	<string name="save">Save</string>
	<string name="print">Print</string>
	<string name="dismiss">Dismiss</string>
	<string name="parent_directory">...</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="entering_reflow_mode">Entering reflow mode</string>
	<string name="leaving_reflow_mode">Leaving reflow mode</string>
	<string name="print_failed">Print failed</string>
	<string name="select_text">Select text</string>
	<string name="copied_to_clipboard">Copied to clipboard</string>
	<string name="no_text_selected">No text selected</string>
	<string name="draw_annotation">Draw annotation</string>
	<string name="nothing_to_save">Nothing to save</string>
	<string name="document_has_changes_save_them_">Document has changes. Save them?</string>
	<string name="cannot_open_document">Cannot open document</string>
	<string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
	<string name="cannot_open_file_Path">Cannot open file: %1$s</string>
	<string name="cannot_open_buffer">Cannot open buffer</string>
	<string name="fill_out_text_field">Fill out text field</string>
	<string name="okay">Okay</string>
	<string name="choose_value">Choose value</string>
	<string name="not_supported">Not supported</string>
	<string name="copy_text_to_the_clipboard">Copy text to the clipboard</string>
	<string name="more">More</string>
	<string name="accept">Accept</string>
	<string name="copy_text">copy text</string>
	<string name="format_currently_not_supported">Format currently not supported</string>
	<string name="toggle_reflow_mode">Toggle reflow mode</string>
	<string name="last_open">Recently opened files</string>
	<string name="delete_opened_file">Remove</string>
	<string name="alert">Alert</string>
	<string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
	<string name="version">1.0</string>
	<string name="saved">Saved</string>
	<string name="please_tap">Please tap to set note position</string>
	
	<string name="pdf_annotate">Annotate PDF</string>
	
	<string name="use">Use</string>
    <string name="nimbus_note"><u>Nimbus Note</u></string>
    <string name="to_see">to see your notes</string>
    <string name="done">Done</string>
    <string name="start_using">Start using Nimbus Clipper</string>
	
    <string name="use_nimbus"><u>Use Nimbus Note to see your notes</u></string>
    <string name="bscreenshot">Screenshot</string>
    <string name="bfull_page">Save Article</string>
    <string name="bsave_fragment">Save Fragment</string>
    <string name="select_pdf">Select PDF</string>
    <string name="pdf_file_is_protected">This file is protected, you can\'t edit.</string>
    <string name="licenses">Licenses</string>
    <string name="license_title">Information</string>
    <string name="license">PDFView is based on the excellent MuPDF library v1.6. It is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version\u00a03 of the License, or (at your option) any later version.\n\nPDFView is not a PDF viewer in the sense of displaying PDF files, there is no graphical user interface and the app is not supposed to be started directly. Instead, it is a PDF viewer that provides PDF rendering service to other apps via a documented interface.\n\nAt the moment, the app is only used by LectureNotes for PDF rendering, but all other Android developers are invited to include an interface to PDFView into their apps and use PDFView for PDF rendering. Details of the interface can be found in the source of PDFView available at http://www.acadoid.com/src/pdfview.tgz, or contact the developer at devel@acadoid.com.\n\nClicking on `OK´ will close PDFView.\n\nVersion 1.8 of October 4, 2014</string>
    
    <string-array name="entries">
		<item>Save all styles</item>
		<item>Without style saving</item>
	</string-array>
	<string-array name="user_agents">
		<item>Mobile</item>
		<item>Desktop</item>
	</string-array>
	
	<string-array name="save_formats">
		<item>JPEG</item>
		<item>PNG</item>
	</string-array>
	
	<string-array name="entry_values">
		<item>1</item>
		<item>0</item>
	</string-array>
	
	<string-array name="dirs">
		<item>My Notes</item>
	</string-array>
	<string-array name="dirs_values">
		<item>default</item>
	</string-array>
    
    
</resources>
