<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="1dp"      >
    <Button
        android:id="@+id/bUndo"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:padding="@dimen/drawable_subpadding"
        android:text="@string/undo"
        android:textColor="@android:color/white"
        android:textSize="@dimen/password_text"
        android:background="@drawable/button_solid_selector"
        android:drawablePadding = "2dp"
        
		/>
    <Button
        android:id="@+id/bHome"
        android:layout_width="wrap_content"
        android:layout_weight="1.2"
        android:layout_height="match_parent"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
		android:padding="@dimen/drawable_subpadding"
        android:text="@string/home"
        android:textColor="@android:color/white"
        android:textSize="@dimen/password_text"
        android:background="@drawable/button_solid_selector"
        android:drawableLeft="@drawable/icon_home"
        android:drawablePadding = "2dp"
        android:visibility="visible"
		/>

	<Button
	    android:id="@+id/bHelp"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    
	    android:background="@drawable/button_solid_selector"
	    android:padding="@dimen/drawable_subpadding"
	    android:text="@string/undo_all"
	    android:textColor="@android:color/white"
	    android:textSize="@dimen/password_text"
	    android:drawablePadding = "2dp" />

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <Button
        android:id="@+id/bTurnLeft"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginRight="1dp"
        android:padding="@dimen/drawable_subpadding"
        android:background="@drawable/button_solid_selector"
        android:text="@string/turn_left"
        android:textColor="@android:color/white"
        android:textSize="@dimen/password_text"
		android:drawableLeft="@drawable/icon_turn_left"
        android:drawablePadding = "2dp"/>
    <Button
        android:id="@+id/bTurnRight"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/button_solid_selector"
		android:padding="@dimen/drawable_subpadding"
        android:text="@string/turn_right"
        android:textColor="@android:color/white"
        android:textSize="@dimen/password_text"
		android:drawableLeft="@drawable/icon_turn_right"
        android:drawablePadding = "2dp"/>
</LinearLayout>
</LinearLayout>