<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@color/dkBack"
	android:layout_marginLeft="0dp"
	android:layout_marginRight="0dp"
	android:layout_marginBottom="0dp"
	android:layout_marginTop="0dp"
    android:orientation="vertical" >
    
<TextView
        android:id="@+id/tvText"	
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="@dimen/password_text"
        android:layout_marginRight="@dimen/password_text"
        android:text="@string/success_save_shot"
        android:textColor="@color/text_normal"
        android:textSize="@dimen/input_text"
        android:textStyle="bold"
               />
<TextView
        android:id="@+id/tvDoc"	
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="@dimen/password_text"
        android:layout_marginRight="@dimen/password_text"
        android:text="@string/success_save_pdf"
        android:textColor="@color/text_normal"
        android:textSize="@dimen/password_text"
        android:textStyle="bold"
        android:visibility="gone"
               />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="14dp"
    android:gravity="bottom"
    android:orientation="horizontal" 
    
	>

    
    <Button
        style="@style/DialogButton"
        android:id="@+id/bFragmentSaveOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ok"
        />
    <Button
        android:id="@+id/bGetLink"
        style="@style/DialogButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/password_text"
        android:layout_weight="1"
        android:text="@string/get_link"
        />
    
</LinearLayout>

</LinearLayout>
</LinearLayout>