<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
       	    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/color_select"
		    android:layout_width="match_parent"
		    android:layout_height="@dimen/browser_panel_height"
		    android:orientation="horizontal"
		    android:background="@color/ltBack" >
		    <LinearLayout
			    android:layout_width="300dp"
			    android:layout_height="wrap_content"
			    android:padding="@dimen/drawable_subpadding"
			    android:layout_marginBottom="1dp"
			    android:orientation="horizontal"
			    android:background="@color/ltBack" >
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:gravity="center_vertical"
			        android:paddingRight="@dimen/drawable_subpadding"
			        android:text="@string/type"
			        android:textSize="18sp"
			        android:textColor="@android:color/white"
			        />
			    <LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="vertical"
				    >
					<TextView 
					    android:id="@+id/ls_tvTextType"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center_horizontal"
				        android:text="@string/standart_size"
				        android:textSize="12sp"
				        android:textColor="@android:color/white"/>  
					<SeekBar
			            android:id="@+id/ls_seekBarType"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            
			            android:progressDrawable="@drawable/icon_progress_line"
			            android:thumb="@drawable/icon_thumb"
			            android:max="40"
		       			android:progress="1"
			            />
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
			    android:layout_width="300dp"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="1dp"
			    android:padding="@dimen/drawable_subpadding"
			    android:orientation="horizontal"
			    android:background="@color/ltBack" >
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:gravity="center_vertical"
			        android:paddingRight="@dimen/drawable_subpadding"
			        android:text="@string/line"
			        android:textSize="18sp"
			        android:textColor="@android:color/white"
			        />
			    <LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="vertical"
				    android:gravity="center_vertical|center_horizontal"
				    >
					<ImageView
					    android:id="@+id/ivLine"
				        android:layout_width="match_parent"
				        android:layout_height="15dp"
				        android:scaleType="fitCenter"
				        android:adjustViewBounds="true"
				        android:padding="@dimen/drawable_subpadding"
						android:src="@drawable/icon_line"
						android:contentDescription="@string/line"
				        />
					<SeekBar
			            android:id="@+id/ls_seekBarLine"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:progressDrawable="@drawable/icon_progress_line"
			            android:thumb="@drawable/icon_thumb"
			            android:max="40"
		       			android:progress="1"
			            />
				</LinearLayout>		
		</LinearLayout>
		    <ImageButton
		        android:id="@+id/ls_bColor1"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="match_parent"
		        android:padding="@dimen/drawable_subpadding"
		        android:scaleType="fitCenter"
		        android:src="@drawable/icon_color_blue"
		        android:background="@drawable/setting_selector"
				android:contentDescription="@string/save_full"
				android:onClick="onClick" />
		    <ImageButton
		        android:id="@+id/ls_bColor2"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="match_parent"
		        android:padding="@dimen/drawable_subpadding"
		        android:scaleType="fitCenter"
		        android:background="@drawable/setting_selector"
				android:contentDescription="@string/save_fragment"
				android:src="@drawable/icon_color_red" 
				android:onClick="onClick"/>
		    <ImageButton
		        android:id="@+id/ls_bColor3"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="match_parent"
		        android:padding="@dimen/drawable_subpadding"
		        android:scaleType="fitCenter"
		        android:background="@drawable/setting_selector"
				android:contentDescription="@string/save_fragment"
		        android:src="@drawable/icon_color_yellow"
		        android:onClick="onClick"
				/>
		    <ImageButton
		        android:id="@+id/ls_bColor4"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="match_parent"
		        android:padding="@dimen/drawable_subpadding"
		        android:scaleType="fitCenter"
		        android:background="@drawable/setting_selector"
				android:contentDescription="@string/save_fragment"
		        android:src="@drawable/icon_color_black"
		        android:onClick="onClick"
				/>    
			<!-- ImageButton
			    android:id="@+id/ls_bColor5"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="match_parent"
		        android:padding="@dimen/drawable_subpadding"
		        android:scaleType="fitCenter"
		        android:background="@drawable/setting_selector"
				android:contentDescription="@string/save_fragment"
		        android:src="@drawable/icon_color_black"
		        android:onClick="onClick"/-->	
		    <ImageButton
		        android:id="@+id/ls_bColor5"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="match_parent"
				android:padding="@dimen/drawable_subpadding"
		        android:scaleType="fitCenter"
		        android:contentDescription="@string/app_name"
		        android:clickable="true"
		        android:src="@drawable/icon_palette"
		        android:background="@drawable/setting_selector"
		        android:onClick="onClick"/>
				<ImageButton
		        android:id="@+id/ls_bToolCancel"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="match_parent"
		        android:padding="12dp"
		        android:src="@drawable/tools_cls"
		        android:background="@drawable/setting_selector"
		        android:scaleType="fitCenter"
				android:contentDescription="@string/take_screenshot" 
				android:onClick="onToolsClick"
				android:visibility="visible"/>
		</LinearLayout>